--- a/DEMto3D_Dialog/DEMto3D_dialog_base.ui
+++ b/DEMto3D_Dialog/DEMto3D_dialog_base.ui
@@ -5,6 +5,14 @@
   <property name="windowModality">
    <enum>Qt::WindowModal</enum>
   </property>
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>639</width>
+    <height>740</height>
+   </rect>
+  </property>
   <property name="windowTitle">
    <string>DEM 3D printing</string>
   </property>
@@ -32,7 +40,17 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <widget class="QComboBox" name="LayerComboBox"/>
+       <widget class="QComboBox" name="LayerComboBox">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>23</height>
+         </size>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -85,7 +103,7 @@
         <item row="0" column="1">
          <widget class="QLabel" name="label_2">
           <property name="text">
-           <string>X:</string>
+           <string>&amp;X:</string>
           </property>
           <property name="buddy">
            <cstring>XMinLineEdit</cstring>
@@ -98,7 +116,7 @@
         <item row="0" column="3">
          <widget class="QLabel" name="label_3">
           <property name="text">
-           <string>Y:</string>
+           <string>&amp;Y:</string>
           </property>
           <property name="buddy">
            <cstring>YMaxLineEdit</cstring>
@@ -266,7 +284,7 @@
         <item>
          <widget class="QLabel" name="label_9">
           <property name="text">
-           <string>Spacing (mm):</string>
+           <string>Spaci&amp;ng (mm):</string>
           </property>
           <property name="buddy">
            <cstring>SpacingLineEdit</cstring>
@@ -329,7 +347,7 @@
         <item>
          <widget class="QLabel" name="label_12">
           <property name="text">
-           <string>Width (mm):</string>
+           <string>Wid&amp;th (mm):</string>
           </property>
           <property name="buddy">
            <cstring>HeightLineEdit</cstring>
@@ -361,7 +379,7 @@
         <item>
          <widget class="QLabel" name="label_13">
           <property name="text">
-           <string>Lenght (mm):</string>
+           <string>&amp;Lenght (mm):</string>
           </property>
           <property name="buddy">
            <cstring>WidthLineEdit</cstring>
@@ -476,8 +494,14 @@
       </property>
       <item>
        <widget class="QLabel" name="label_16">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>23</height>
+         </size>
+        </property>
         <property name="text">
-         <string>Exaggeration factor:</string>
+         <string>Exa&amp;ggeration factor:</string>
         </property>
         <property name="buddy">
          <cstring>ZScaleDoubleSpinBox</cstring>
@@ -486,6 +510,12 @@
       </item>
       <item>
        <widget class="QDoubleSpinBox" name="ZScaleDoubleSpinBox">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>23</height>
+         </size>
+        </property>
         <property name="decimals">
          <number>1</number>
         </property>
@@ -666,7 +696,7 @@
       <widget class="QToolButton" name="STLToolButton">
        <property name="minimumSize">
         <size>
-         <width>100</width>
+         <width>150</width>
          <height>25</height>
         </size>
        </property>
