icon path didn't work anymore, changed to :/icons/<filename>, resource qrc prefix also changed to /icons

--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/plugins/DEMto3D" >
+    <qresource prefix="/icons" >
         <file>icons/downright.png</file>
         <file>icons/upleft.png</file>
         <file>icons/cursor_extension.png</file>
